--- a/style.css
+++ b/style.css
@@ -12,13 +12,13 @@
 }
 input[type="text"]{
     background-color:white;
-    color: black;
+    color: blue;
     border: solid black 2px;
     width: 100%;
     height: 100%;
     border-radius: 0.5rem;
     font-size: 4em;
-    font-weight: 10;
+    font-weight: 12;
 }
 input[type="button"]{
     background-color: white;
